[tool.poetry]
name = "python-dao"
version = "0.1.1"
description = "A tool to create custom objects from database outputs"
authors = ["Maxime Boulanger <boumax84@gmail.com>"]
readme = "README.md"
packages = [{include = "python_dao"}]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.2"
pylint = "^2.17.4"
eradicate = "^2.2.0"
pybetter = "^0.4.1"
autotyping = "^23.3.0"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 1


[project.urls]
"Homepage" = "https://github.com/mbml84/python-dao"
"Bug Tracker" = "https://github.com/mbml84/python-dao/issues"
